frontend/test/should_fail/computations_decl_use_returns_arguments_mismatch_009.grg
using model_init;

func() : boolean
{
	return(true, false);
}
